# dotfiles

./: .gitignore  README.md  install.conf.yaml  mise.toml  pyproject.toml
cpp/: clang-format
ghostty/: config
hosts/macbook-home/macos/: flake.nix
hosts/pc-home/nixos/: flake.nix  hardware-configuration.nix  nixos.nix
nix/macbook-home/macos/: darwin.nix  flake.nix
nix/macbook-home/macos/zahar/: home.nix
nix/macos/: darwin.nix  flake.nix  home.nix
nix/pc-home/nixos/: flake.nix  nixos.nix
nix/pc-home/nixos/zahar/: home.nix
obsidian/: macbook.obsidian.vimrc
python/: pylintrc  ruff.toml
share/python/: mypy.ini
share/vim/: vimrc
share/vim/settings/: functions.vim
share/vim/shortcuts/: shortcuts.vim
share/ycm_extra_conf/: ycm_extra_conf.py
share/ycm_extra_conf/completers/: __init__.py
share/ycm_extra_conf/path_utils/: __init__.py  node_finder.py
share/zsh/lib/: cli.sh  path.zsh
third_party_vimrc/: macbook.vimrc  pc.vimrc
vim/: snapshot.vim  vimrc
vim/settings/: functions.vim  shortcuts.vim
vim/shortcuts/: shortcuts.vim  shortcuts_macunix.vim  shortcuts_unix_cli.vim  shortcuts_unix_gui.vim
vimspector/configurations/your_os_name/python/: my_configuration.json
vscode/: macbook.keybindings.json  macbook.settings.json
ycm_extra_conf/: completer_context.py  ycm_extra_conf.py
ycm_extra_conf/completers/: TCppCompleter.py  __init__.py  cpp.py  interface.py  python.py
ycm_extra_conf/path_utils/: node_finder.py
zed/: debug.json  keymap.json  settings.json  tasks.json
zsh/: p10k.zsh  zshenv  zshrc
zsh/pc-home/nixos/zahar/: zshenv
(+13 files in other folders)
