[project]
name = "dotfiles"
version = "0.1.0"
description = "My dotfiles managed with Dotbot"
authors = [
    {name = "ZaharChernenko",email = "zaharchernenko35@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dotbot (>=1.21.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
